TMP TMP: switch on -Xserialize-ir

--- a/libraries/stdlib/jvm/build.gradle
+++ b/libraries/stdlib/jvm/build.gradle
@@ -122,6 +122,7 @@ compileKotlin {
                 "-opt-in=kotlin.contracts.ExperimentalContracts",
                 "-Xuse-14-inline-classes-mangling-scheme",
                 "-Xsuppress-deprecated-jvm-target-warning",
+                "-Xserialize-ir",
         ]
         moduleName = "kotlin-stdlib"
     }
