Fix some js tests.
With plugin multivariants it is not possible now to use plugin
 resolution strategy to override plugin artifacts.

^KT-49227 In Progress

--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/mpp-different-classloaders/jvm-app/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/mpp-different-classloaders/jvm-app/build.gradle
@@ -1,11 +1,14 @@
 plugins {
+    id "org.jetbrains.kotlin.jvm"
     id "maven-publish"
 }
 
-apply plugin: "kotlin2js"
-
 group = "com.example"
 version = "1.0"
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+}
 
 if (project.findProperty("mppProjectDependency") == "true") {
 
