--- a/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/mpp-different-classloaders/js-app/build.gradle
+++ b/libraries/tools/kotlin-gradle-plugin-integration-tests/src/test/resources/testProject/mpp-different-classloaders/js-app/build.gradle
@@ -1,11 +1,14 @@
 plugins {
+    id "org.jetbrains.kotlin.js"
     id "maven-publish"
 }
 
-apply plugin: "kotlin2js"
-
 group = "com.example"
 version = "1.0"
+
+kotlin {
+    js {}
+}
 
 if (project.findProperty("mppProjectDependency") == "true") {
 
@@ -28,7 +31,7 @@ if (project.findProperty("mppProjectDependency") == "true") {
 publishing {
     publications {
         main(MavenPublication) {
-            from components.java
+            from components['kotlin']
         }
     }
     repositories {
